# lvslang

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  example.lvsl  example.metal
include/lvslang/: ast.hpp  common.hpp  lvslang.hpp
include/lvslang/frontends/lvsl/: lexer.hpp  parser.hpp  standard_library.inc  standard_library.lvsl  token.hpp
include/lvslang/frontends/metal/: lexer.hpp  parser.hpp  standard_library.inc  standard_library.metal  token.hpp
shader_ir_builder/: block.cpp  block.hpp  common.cpp  common.hpp  context.hpp  function.hpp  ir.hpp  value.hpp
shader_ir_builder/air/: block.cpp  block.hpp  function.cpp  function.hpp  ir.cpp  ir.hpp  type_handle.cpp  type_handle.hpp
shader_ir_builder/spirv/: block.hpp  function.cpp  function.hpp  ir.cpp  ir.hpp  type_value.cpp  type_value.hpp  value.cpp
src/: ast.cpp  ast.hpp  code_writer.cpp  code_writer.hpp  common.cpp  common.hpp  embed_standard_library.cpp  ir_writer.cpp  ir_writer.hpp  lexer.hpp  lvslang.cpp  main.cpp  parser.hpp  token.hpp  type_name.cpp  type_name.hpp
src/frontends/lvsl/: lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  standard_library.inc  standard_library.lvsl  token.hpp
src/frontends/lvsl/standard_library/: math.lvsl  textures.lvsl
src/frontends/metal/: lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  standard_library.inc  standard_library.metal  token.hpp
src/frontends/metal/standard_library/: math.metal  textures.metal
src/lvslang/: ast.hpp  common.hpp  lvslang.hpp
src/lvslang/frontends/lvsl/: parser.hpp  token.hpp
src/lvslang/frontends/metal/: parser.hpp  token.hpp
tests/: CMakeLists.txt  advanced_features.expected.glsl  advanced_features.expected.hlsl  advanced_features.expected.ll  advanced_features.expected.metal  advanced_features.expected.spvasm  advanced_features.lvsl  advanced_features.metal  arrays.expected.glsl  arrays.expected.hlsl  arrays.expected.ll  arrays.expected.metal  arrays.expected.spvasm  arrays.lvsl  arrays.metal  basic.expected.glsl  basic.expected.hlsl  basic.expected.ll  basic.expected.metal  basic.expected.spvasm  basic.lvsl  basic.metal  control_flow.expected.glsl  control_flow.expected.hlsl  control_flow.expected.ll  control_flow.expected.metal  control_flow.expected.spvasm  control_flow.lvsl  control_flow.metal  macros.expected.glsl  macros.expected.hlsl  macros.expected.ll  macros.expected.metal  macros.expected.spvasm  macros.lvsl  macros.metal  main.cpp  matrices.expected.glsl  matrices.expected.hlsl  matrices.expected.ll  (+25 more)
tools/: lvslang.cpp
